fix: menu-button display on mobile

--- a/static/css/temporary.css
+++ b/static/css/temporary.css
@@ -161,10 +161,6 @@
         height: 95%;
     }
     
-    #menu-button {
-        display: none;
-    }
-    
     .temporary-stages {
         flex-direction: column;
         gap: 8vw;
